--- a/styles/base/_mixins.scss
+++ b/styles/base/_mixins.scss
@@ -1,18 +1,18 @@
 // Media Queries
 @mixin atSmall {
-	@media (min-width: 340px) {
+	@media (min-width: 600px) {
 		@content;
 	}
 }
 
 @mixin atMedium {
-	@media (min-width: 668px) {
+	@media (min-width: $container) {
 		@content;
 	}
 }
 
 @mixin atLarge {
-	@media (min-width: 1030px) {
+	@media (min-width: $container-wide) {
 		@content;
 	}
 }
