--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,21 +4,10 @@
 @import 'base/global';
 
 // Module styles
-@import 'modules/banner';
-@import 'modules/footer';
-@import 'modules/hero';
-@import 'modules/carousel';
 @import 'modules/button';
 @import 'modules/container';
-@import 'modules/linework';
-@import 'modules/menu';
-@import 'modules/modal';
-@import 'modules/navigation';
-@import 'modules/row';
-@import 'modules/featured';
-@import 'modules/gallery';
-@import 'modules/itinerary';
-@import 'modules/categories';
-@import 'modules/post';
-@import 'modules/tag';
-@import 'modules/social';
+@import 'modules/header';
+@import 'modules/home';
+@import 'modules/logo';
+@import 'modules/stripe';
+@import 'modules/wrapper';
