--- a/post.hbs
+++ b/post.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-{{> "banner"}}
+{{!-- {{> "banner"}} --}}
 
 {{#post}}
 <div class="post">
@@ -35,10 +35,9 @@
         <div class="post__content">
             {{content}}
         </div>
-        {{> "modal"}}
     </div>
 </div>
 
-{{> "gallery"}}
+{{!-- {{> "gallery"}} --}}
 
 {{/post}}
