--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,8 +6,10 @@
 // Module styles
 @import 'modules/button';
 @import 'modules/container';
+@import 'modules/footer';
 @import 'modules/header';
 @import 'modules/home';
+@import 'modules/instagram';
 @import 'modules/logo';
 @import 'modules/stripe';
 @import 'modules/wrapper';
