Added favicon, using title and description for header.

--- a/index.hbs
+++ b/index.hbs
@@ -3,10 +3,10 @@
 <section class="container container--wide home">
   <header class="header home__header">
     <h1 class="logo logo--large header__logo">
-      Life Less Wasteful
+      {{meta_title}}
     </h1>
     <p class="header__tagline">
-      Beard helvetica green juice fanny pack, 8-bit bitters art party cold-pressed occupy heirloom.
+      {{meta_description}}
     </p>
   </header>
   <main class="home__main">
