--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,8 +8,10 @@
 @import 'modules/container';
 @import 'modules/footer';
 @import 'modules/header';
+@import 'modules/hero';
 @import 'modules/home';
 @import 'modules/instagram';
 @import 'modules/logo';
+@import 'modules/post';
 @import 'modules/stripe';
 @import 'modules/wrapper';
