--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -32,7 +32,7 @@
         <div class="footer__column">
             <h3 class="footer__title">
                 <a href="https://www.instagram.com/life.less.wasteful/" target="_blank">
-                    Instagram
+                    Life Less Wasteful Instagram
                 </a>
             </h3>
             <div class="footer__instagram">
