--- a/styles/modules/_wrapper.scss
+++ b/styles/modules/_wrapper.scss
@@ -11,7 +11,7 @@
     bottom: 0;
     left: 0;
     background-color: $color-secondary;
-    z-index: -2;
+    z-index: -3;
   }
 
   &::after {
@@ -21,10 +21,10 @@
     right: 0;
     left: 0;
     height: 200vh;
-    background-image: radial-gradient($color-tertiary, $color-secondary 70%, $color-secondary);
+    background-image: radial-gradient(lighten($color-tertiary, 5%), $color-secondary 70%, $color-secondary);
     background-size: cover;
     background-position: center 0;
     background-repeat: no-repeat;
-    z-index: -1;
+    z-index: -2;
   }
 }
