Updated title and description.

--- a/index.hbs
+++ b/index.hbs
@@ -3,10 +3,10 @@
 <section class="container container--wide home">
   <header class="header home__header">
     <h1 class="logo logo--large header__logo">
-      {{meta_title}}
+      {{@blog.title}}
     </h1>
     <p class="header__tagline">
-      {{meta_description}}
+      {{@blog.description}}
     </p>
   </header>
   <main class="home__main">
