--- a/styles/modules/_hero.scss
+++ b/styles/modules/_hero.scss
@@ -65,6 +65,7 @@
 
 	&__logo {
 		color: white;
+		text-align: center;
 		padding: 0 0 10px 0;
 		font-size: 1.3rem;
 		line-height: 30px;
@@ -93,6 +94,7 @@
 	&__subtitle {
 		color: white;
 		padding: 0 0 18px 0;
+		text-align: center;
 	}
 
 	&__link {
