--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@
     <div class="hero__content">
       <h2 class="hero__logo">
         <a href="/" class="hero__link">
-          {{meta_title}}
+          {{@blog.title}}
         </a>
       </h2>
       <h1 class="hero__title">
